--- a/help.html
+++ b/help.html
@@ -51,7 +51,7 @@
 </p>
 <p>Initial Problem &emsp; &emsp; &emsp; &emsp; &emsp; Completed Board</p>
 </div>
-<p>There a 4 different types of ships:</p>
+<p>There are 4 different types of ships:</p>
 <p> <img src="Battleship.png" style="width:200px;height:50px;">&emsp;One Battleship </p>
 <p> <img src="Cruiser.png" style="width:150px;height:50px;">&emsp;Two Cruisers</p>
 <p> <img src="Destroyer.png" style="width:100px;height:50px;">&emsp;Three Destroyers</p>
@@ -60,11 +60,11 @@
 	<br />One last rule is that no part of a ship may touch adjacently nor diagonally with another ship.
 	<br />Click on an empty square to turn it into water and click again to turn it into a ship piece
 </p>
-<p>
 <a style="text-decoration:none;" href = "index.html"><button class = "button">Return</button></a>
+<p>
 I'm still trying to update the difficulty of puzzles and add new levels.
 <br />If you have any suggestions please text me/tell me in person what I can do!
-<br />Updated 3/27/2018
+<br />Updated 4/16/2018
 </p>
 
 </body>
