--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 			<div class="col-xs-12 col-md-5 d-flex align-items-center justify-content-center btn-group-container" >
 				<div class="btn-group-vertical btn-group-lg">
 					<button type="button" class="btn btn-primary" id="btnNewProblem" data-toggle="modal" data-target="#NewProblemModal">New Problem</button>
+					<button type="button" class="btn btn-primary" id="btnSolution">Solution</button>
+					<button type="button" class="btn btn-primary" id="btnReset">Reset</button>
 					<button type="button" class="btn btn-primary" id="btnHelp">Help</button>
 				</div>
 			</div>
@@ -50,7 +52,7 @@
 			  <!--Body-->
 			  <div class="modal-body">
 				<div class="md-form mb-5">
-				  <input id="size" type="text" class="form-control validate">
+				  <input id="size" type="text" class="form-control validate" value="10" placeholder="">
 				  <label data-error="wrong" data-success="right" for="form1">Size</label>
 				</div>
 
@@ -73,8 +75,6 @@
 		
 		<script src="battleships.js"></script>
 		
-		
-
 	</body>
 
 </html>
