Update phone ratio

--- a/help.html
+++ b/help.html
@@ -18,7 +18,7 @@
 <body class="container-fluid">
 
 	<div class="row justify-content-center">		
-		<h1>How to Play Battleships</h1>
+		<h1 class="text-center">How to Play Battleships</h1>
 	</div>
 	<div class="row justify-content-left-side" style="margin:0px">
 		<p>This version Battleships is a mix between the classic Battleships game and Sudoku.
